<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DivelCalendar!</string>
    <string name="app_name">Divel Calendar</string>
    <string name="description">Divel Calendar ahora en Android para llevar todas tus cosas en el bolsillo</string>
    <string name="set">Ver eventos</string>
    <string-array name="botones">
        <item >Añadir evento</item>
        <item >Añadir recordatorio</item>
        <item >Editar Evento</item>
        <item >Información</item>
    </string-array>
        <string name="botaddevt">Añadir Evento</string>
        <string name="inf">Información</string>
        <string name="editevt">Editar Evento</string>
        <string name="delevt">Borrar Evento</string>
        <string name="acerca">Acerca de...</string>
        <string name="titulo">Título</string>
        <string name="fecha">Fecha</string>
        <string name="lugar">Lugar</string>
        <string name="duracion">Duración</string>
        <string name="comentario">Comentario</string>
        <string name="ok">OK</string>
        <string name="chat">DivChat</string>

</resources>